sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:3: error: not found: type int
var debut:int=0
          ^AlgCocktailSort2:4: error: not found: type int
var fin:int= getNombreValeurs()-2
        ^